--- a/_posts/2020-07-12-12.Collections.md
+++ b/_posts/2020-07-12-12.Collections.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "12.Collections"
+title:  "12.Java Collections Framework"
 date:   2020-07-12 15:42:52-15:00
 author: SANGGI JEON
 categories: JAVA
