Add posts Oracle

--- a/_posts/2020-07-02-01.Object-Oriented-Progamming.md
+++ b/_posts/2020-07-02-01.Object-Oriented-Progamming.md
@@ -4,7 +4,7 @@ title:  "01.객체지향 프로그래밍(Object Oriented Progamming)"
 date:   2020-07-02 21:57:52-05:00
 author: SANGGI JEON
 categories: JAVA
-cover:  "/assets/instacode.png"
+cover:  "/assets/java/java.png"
 ---
 
 ## 객체지향 프로그래밍(Object Oriented Progamming)
