--- a/_posts/2020-07-02-05.Access-modifier.md
+++ b/_posts/2020-07-02-05.Access-modifier.md
@@ -4,7 +4,7 @@ title:  "05.접근제어자"
 date:   2020-07-02 22:02:52-05:00
 author: SANGGI JEON
 categories: JAVA
-cover:  "/assets/instacode.png"
+cover:  "/assets/java/java.png"
 ---
 
 ## 접근제어자
