--- a/_posts/2020-07-02-06.Interface.md
+++ b/_posts/2020-07-02-06.Interface.md
@@ -4,7 +4,7 @@ title:  "06.인터페이스(Interface)"
 date:   2020-07-02 22:03:52-05:00
 author: SANGGI JEON
 categories: JAVA
-cover:  "/assets/instacode.png"
+cover:  "/assets/java/java.png"
 ---
 
 ## 인터페이스(Interface)
