--- a/_posts/2020-07-02-07.OverrodingVSOverriding.md
+++ b/_posts/2020-07-02-07.OverrodingVSOverriding.md
@@ -4,7 +4,7 @@ title:  "07.오버로딩(Overloading)과 오버라이딩(Overriding)"
 date:   2020-07-02 22:04:52-05:00
 author: SANGGI JEON
 categories: JAVA
-cover:  "/assets/instacode.png"
+cover:  "/assets/java/java.png"
 ---
 
 ## 오버로딩(Overloading)과 오버라이딩(Overriding)
