--- a/_posts/2020-07-02-08.Bounded-type-parameter-AND-Wild-Card.md
+++ b/_posts/2020-07-02-08.Bounded-type-parameter-AND-Wild-Card.md
@@ -4,7 +4,7 @@ title:  "08.제한된 타입 파라미터와 와일드카드 타입"
 date:   2020-07-02 22:05:52-05:00
 author: SANGGI JEON
 categories: JAVA
-cover:  "/assets/instacode.png"
+cover:  "/assets/java/java.png"
 ---
 
 ## 제한된 타입 파라미터와 와일드카드 타입
