--- a/_posts/2020-07-02-10.Standard-API-Functional-Interface.md
+++ b/_posts/2020-07-02-10.Standard-API-Functional-Interface.md
@@ -4,7 +4,7 @@ title:  "10.표준 API 함수적 인터페이스"
 date:   2020-07-02 22:07:52-05:00
 author: SANGGI JEON
 categories: JAVA
-cover:  "/assets/instacode.png"
+cover:  "/assets/java/java.png"
 ---
 
 ## 표준 API 함수적 인터페이스
