--- a/_posts/2020-07-12-12.Collections.md
+++ b/_posts/2020-07-12-12.Collections.md
@@ -4,7 +4,7 @@ title:  "12.Java Collections Framework"
 date:   2020-07-12 15:42:52-05:00
 author: SANGGI JEON
 categories: JAVA
-cover:  "/assets/instacode.png"
+cover:  "/assets/java/java.png"
 ---
 
 ## Collections
