--- a/_posts/2020-07-02-02.JVM.md
+++ b/_posts/2020-07-02-02.JVM.md
@@ -4,7 +4,7 @@ title:  "02.JVM 메모리 구조"
 date:   2020-07-02 21:59:52-05:00
 author: SANGGI JEON
 categories: JAVA
-cover:  "/assets/instacode.png"
+cover:  "/assets/java/java.png"
 ---
 
 ## JVM 메모리 구조
