--- a/_posts/2020-07-02-03.Exception.md
+++ b/_posts/2020-07-02-03.Exception.md
@@ -4,7 +4,7 @@ title:  "03.예외(Exception)처리"
 date:   2020-07-02 22:00:52-05:00
 author: SANGGI JEON
 categories: JAVA
-cover:  "/assets/instacode.png"
+cover:  "/assets/java/java.png"
 ---
 
 ## 예외(Exception)처리
