--- a/_posts/2020-07-02-04.Generics.md
+++ b/_posts/2020-07-02-04.Generics.md
@@ -4,7 +4,7 @@ title:  "04.제네릭스(Generics)"
 date:   2020-07-02 22:01:52-05:00
 author: SANGGI JEON
 categories: JAVA
-cover:  "/assets/instacode.png"
+cover:  "/assets/java/java.png"
 ---
 
 ## 제네릭스(Generics)
