--- a/_posts/2020-07-02-09.Lambda.md
+++ b/_posts/2020-07-02-09.Lambda.md
@@ -4,7 +4,7 @@ title:  "09.람다식(Lambda Expression)"
 date:   2020-07-02 22:06:52-05:00
 author: SANGGI JEON
 categories: JAVA
-cover:  "/assets/instacode.png"
+cover:  "/assets/java/java.png"
 ---
 
 ## 람다식(Lambda Expression)
