--- a/_posts/2020-07-02-11.Functional-Interface.md
+++ b/_posts/2020-07-02-11.Functional-Interface.md
@@ -4,7 +4,7 @@ title:  "11.함수적 인터페이스"
 date:   2020-07-02 22:08:52-05:00
 author: SANGGI JEON
 categories: JAVA
-cover:  "/assets/instacode.png"
+cover:  "/assets/java/java.png"
 ---
 
 ## 함수적 인터페이스
